force-app/main/default/objects/Catalogue_Photos__c/Catalogue_Photos__c.object-meta.xml
<CustomObject>
    <label>Photos &amp; Links</label>
    <nameField>
        <label>Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Photos  &amp; Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>