force-app/main/default/objects/Catalogue_Photos__c/fields/Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Catalogue__c</fullName>
    <label>Catalogue</label>
    <referenceTo>Catalogue__c</referenceTo>
    <relationshipLabel>Photos  &amp; Links</relationshipLabel>
    <relationshipName>Photos_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>