force-app/main/default/objects/Catalogue_Photos__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>