force-app/main/default/objects/Catalogue_Photos__c/fields/Photos__c.field-meta.xml
<CustomField>
    <fullName>Photos__c</fullName>
    <label>Photos</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>