force-app/main/default/objects/Catalogue_Photos__c/fields/thumbnail_Image__c.field-meta.xml
<CustomField>
    <fullName>thumbnail_Image__c</fullName>
    <label>thumbnail Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>