force-app/main/default/objects/Catalogue_Photos__c/fields/Video_Link__c.field-meta.xml
<CustomField>
    <fullName>Video_Link__c</fullName>
    <label>Video Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>