force-app/main/default/objects/Catalogue_Photos__c/recordTypes/Link.recordType-meta.xml
<RecordType>
    <fullName>Link</fullName>
    <active>true</active>
    <label>Link</label>
</RecordType>