force-app/main/default/objects/Catalogue_Photos__c/recordTypes/Photo_Gallery.recordType-meta.xml
<RecordType>
    <fullName>Photo_Gallery</fullName>
    <active>true</active>
    <label>Photo Gallery</label>
</RecordType>